<!-- res/layout/activity_login.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background_main"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bem_vindo"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textColor="@color/text_color_primary"
        android:fontFamily="@font/adlam_display"
        android:layout_marginBottom="32dp"/>

    <EditText
        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/username"
        android:hint="@string/username"
        android:inputType="text"
        style="@style/RoundedInput"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        style="@style/RoundedInput"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        style="@style/RoundedButton"/>

</LinearLayout>
