<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="8dp"
    android:paddingEnd="16dp"
    android:paddingTop="32dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/tvTodoTitleDetail"
        android:layout_width="91dp"
        android:layout_height="24dp"
        android:text="@string/todotitledetail"
        android:textSize="24sp"
        android:transitionName="taskTitleTransition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="65dp"
        android:autofillHints="@string/digite_descricao_tarefa"
        android:ems="90"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:lines="5"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:hint="@string/digite_descricao_tarefa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTodoTitleDetail" />

</androidx.constraintlayout.widget.ConstraintLayout>